--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-segmentation"></script>
+
+    <!-- Optional: Include below scripts if you want to use TensorFlow.js runtime. -->
+    <!--       <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
+ -->
+    <!-- Optional: Include below scripts if you want to use MediaPipe runtime. -->
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
